# ANANYA

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-colab.txt
.github/workflows/: ci.yml
apps/: gradio_demo.py
apps/api/: main.py
benchmarks/: README.md  constitutional_reasoning.jsonl
configs/: base.yaml
configs/glossary/: legal_terms.yaml
configs/training/: cpt_colab_t4.yaml  sft_colab_t4.yaml
data/processed/: constitution_en_clean.jsonl  constitution_parallel.jsonl  instruct_en.jsonl
data/raw/: constitution_en.jsonl
data/splits/instruct/: test.jsonl  train.jsonl  validation.jsonl
data/splits/pretrain/: test.jsonl  train.jsonl  validation.jsonl
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BRANDING.md  RESEARCH.md
notebooks/: 01_colab_setup_and_train.ipynb
scripts/data/: prepare_corpus.py
scripts/eval/: run_benchmarks.py
scripts/export/: convert_to_gguf.sh
scripts/hub/: push_all.py
scripts/rag/: build_index.py
scripts/train/: run_sft_colab.py
scripts/translate/: run_indictrans2.py
src/ananya/: __init__.py
src/ananya/cli/: __init__.py  eval.py  hub_push.py  prepare.py  rag.py  train.py
src/ananya/data/: __init__.py  cleaning.py  constitution_ingest.py  corpus_gather.py  instruct_builder.py  splits.py
src/ananya/evaluation/: __init__.py  metrics.py  runner.py
src/ananya/hub/: __init__.py  cards.py  push.py
src/ananya/inference/: generate.py  quantize.py
src/ananya/rag/: __init__.py  chunking.py  indexer.py  pipeline.py
src/ananya/schemas/: __init__.py  datasets.py
src/ananya/training/: __init__.py  cpt.py  qlora.py
src/ananya/translation/: __init__.py  cache.py  pipeline.py  terminology.py
src/ananya/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: test_schemas.py
