[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ananya"
version = "0.1.0"
description = "Sovereign Indian constitutional multilingual SLM ecosystem (QLoRA, RAG, HF-native)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "ANANYA Contributors" }]
keywords = [
  "indian-constitution",
  "legal-nlp",
  "multilingual",
  "qlora",
  "peft",
  "sovereign-ai",
  "indic",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "trl>=0.9.0",
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "chromadb>=0.5.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "jsonlines>=4.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "evaluate>=0.4.0",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.4.0",
  "langdetect>=1.0.9",
  "huggingface-hub>=0.24.0",
  "safetensors>=0.4.0",
  "gradio>=4.40.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "indianconstitution",
]

[project.optional-dependencies]
train = [
  "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
  "wandb>=0.17.0",
]
translate = [
  "indic-trans2 @ git+https://github.com/AI4Bharat/IndicTrans2.git",
  "sacremoses>=0.1.0",
]
rag-gpu = ["faiss-gpu>=1.8.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]
all = ["ananya[train,translate,rag-gpu,dev]"]

[project.scripts]
ananya-prepare = "ananya.cli.prepare:main"
ananya-train = "ananya.cli.train:main"
ananya-eval = "ananya.cli.eval:main"
ananya-rag = "ananya.cli.rag:main"
ananya-push = "ananya.cli.hub_push:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
